# sdl3_gs

./: CLAUDE.md  Cargo.toml  README.md
examples/demo/src/: fill_array.comp  fill_array.comp.spv  main.rs  textured.frag  textured.frag.spv  textured.vert
src/: README.md  callbacks.rs  device.rs  event.rs  lib.rs  properties.rs  slot_map.rs  tools.rs  window.rs
