[package]
name = "sdl3_gs"
version = "0.1.0"
edition = "2024"
description = "Safe Rust wrapper around SDL3's GPU API"
license = "MIT"
repository = "https://github.com/archee565/sdl3_gs.git"
keywords = ["sdl3", "gpu", "graphics", "gamedev"]
categories = ["game-development", "graphics", "rendering"]

[dependencies]
sdl3-sys = { version = "0.6.1" }
bytemuck = { version = "1", features = ["derive"] }

[lib]
name = "sdl3_gs"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo/src/main.rs"
